modify the TomcatConfiguration